--- a/cssnote/styles.scss
+++ b/cssnote/styles.scss
@@ -148,7 +148,7 @@ body{
         }
 
         @media all and (max-width: 300px) {
-          font-size: 1.5em;
+          font-size: 1.3em;
         }
     }
     &__favorite {
@@ -287,7 +287,7 @@ body{
         @media all and (max-width: 300px) {
           width: 43px;
         }
-        
+
         & i {
             color: white;
             font-size: 20px;
