--- a/csspalette/styles.scss
+++ b/csspalette/styles.scss
@@ -150,7 +150,7 @@ body{
         }
 
         @media all and (max-width: 300px) {
-          font-size: 1.5em;
+          font-size: 1.3em;
         }
     }
     &__favorite {
@@ -289,7 +289,7 @@ body{
         @media all and (max-width: 300px) {
           width: 43px;
         }
-        
+
         & i {
             color: white;
             font-size: 20px;
